--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "dependencies": {
     "@nx/next": "16.5.0",
+    "@prisma/client": "^4.16.2",
+    "@swc/helpers": "~0.5.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,6 +21,8 @@
     "@nx/linter": "16.5.0",
     "@nx/react": "16.5.0",
     "@nx/workspace": "16.5.0",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
@@ -41,6 +45,7 @@
     "nx": "16.5.0",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "prisma": "^4.16.2",
     "sass": "1.62.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
