--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@nx/cypress": "16.5.0",
