--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@shop-magicbeauty/common": ["libs/common/src/index.ts"],
-      "@shop-magicbeauty/common/server": ["libs/common/src/server.ts"],
-      "@shop-magicbeauty/services": ["libs/services/src/index.ts"],
-      "@shop-magicbeauty/ui": ["libs/ui/src/index.ts"]
+      "@shop-magicbeauty/services": ["libs/services/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
