--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app:
     build:
-      dockerfile: ./docker/Dockerfile.app
+      dockerfile: docker/Dockerfile
     restart: always
     ports:
       - '4200:4200'
